tests/negative/traits/impl_type_for.orng
// impl_type_for.orng:5:9: error: cannot implement for this, not a trait
// impl Int for () {
//        ^
// 
impl Int for () {
    
}